src-liberty_parse-2.6/test/example.rangerr.ref



reading example.rangerr.lib...
... Done. 


Checking the database...

NOTE: The technology cmos was specified.
NOTE: No delay_model attribute specified in the library; the delay_model 'generic_cmos' is assumed.
NOTE: Using the cmos syntax tables...
ERROR: example.rangerr.lib:3, Attribute default_max_utilization has value 200, but it should be less than 100. (Syntax Error Encountered)
Errors detected

... Done. 


Stats:


Library example:
   cells: 2

Quitting..
Done....
